# Learning-over-test-executions

./: README.md
LLVM/: CMakeLists.txt  RuntimeRecorder.cpp
LLVM/RuntimeTypeLib/: CMakeLists.txt  Makefile  function_call.h  ir_type.h  test_main.cpp  valueRecorder.cpp  valueRecorder.h
python/: architecture.py  cluster_classifier.py  model.pymodel  plotter.py  preprocessor.py
tex/: Abstract.tex  Acknowledgements.tex  Approach.tex  Background.tex  Experiments.tex  Future_work.tex  Introduction.tex  References.bib  Results.tex  main.tex
